--- a/projectgeneral/templates/index.html
+++ b/projectgeneral/templates/index.html
@@ -59,7 +59,7 @@
                     <!--Center Start-->
                     <div class="header-middle-center col">
                         <div class="header-logo">
-                            <a href="index.html"><img src="{% static  'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                            <a href="index"><img src="{% static  'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                         </div>
                     </div>
                     <!--Center End-->
@@ -67,7 +67,7 @@
                     <!--Right Start-->
                     <div class="header-middle-right col-auto">
                         <div class="header-middle-free-case">
-                            <a href="contact-us-1.html"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                            <a href="contact"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
                         </div>
                     </div>
                     <!--Right End-->
@@ -86,13 +86,13 @@
                             <div class="primary-menu">
                                 <nav>
                                     <ul>
-                                        <li class="menu-item-has-children"><a href="index.html">Home</a>
+                                        <li class="menu-item-has-children"><a href="index">Home</a>
                                             <ul class="sub-menu">
-                                                <li><a href="index.html">Homepage 01</a></li>
-                                                <li><a href="index-2.html">Homepage 02</a></li>
+                                                <li><a href="index">Homepage 01</a></li>
+                                                <!-- <li><a href="index-2.html">Homepage 02</a></li>
                                                 <li><a href="index-3.html">Homepage 03</a></li>
                                                 <li><a href="index-4.html">Homepage 04</a></li>
-                                                <li><a href="index-5.html">Homepage 05</a></li>
+                                                <li><a href="index-5.html">Homepage 05</a></li> -->
                                             </ul>
                                         </li>
                                         <li class="menu-item-has-children"><a href="practice-areas-1.html">Practice Areas</a>
@@ -113,38 +113,38 @@
                                         <li><a href="case-results.html">Case Results</a></li>
                                         <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                             <ul class="sub-menu">
-                                                <li><a href="attorneys.html">Attorneys</a></li>
-                                                <li><a href="single-attorney.html">Single Attorney</a></li>
+                                                <li><a href="attorneys">Attorneys</a></li>
+                                                <!-- <li><a href="single-attorney.html">Single Attorney</a></li>
                                                 <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
-                                                <li><a href="careers.html">Careers</a></li>
+                                                <li><a href="careers.html">Careers</a></li> -->
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children"><a href="news.html">Legal News</a>
+                                        <!-- <li class="menu-item-has-children"><a href="news.html">Legal News</a>
                                             <ul class="sub-menu">
-                                                <li><a href="news.html">News</a></li>
+                                                <!-- <li><a href="news.html">News</a></li>
                                                 <li><a href="news-2-column.html">News Two Columns</a></li>
-                                                <li><a href="news-details.html">News Details</a></li>
-                                            </ul>
-                                        </li>
+                                                <li><a href="news-details.html">News Details</a></li> -->
+                                            <!-- </ul>
+                                        </li> --> -->
                                         <li class="menu-item-has-children"><a href="shop.html">Shop</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
-                                                <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                                <li><a href="product-details.html">Product Details</a></li>
-                                                <li><a href="cart.html">Shopping Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="login-register.html">Login & Register</a></li>
-                                                <li><a href="my-account.html">My Account</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
+                                                <li><a href="shop">Shop</a></li>
+                                                <!-- <li><a href="shop-2-column.html">Shop 2 Column</a></li> -->
+                                                <li><a href="product-details">Product Details</a></li>
+                                                <li><a href="cart">Shopping Cart</a></li>
+                                                <!-- <li><a href="checkout.html">Checkout</a></li> -->
+                                                <!-- <li><a href="login-register.html">Login & Register</a></li> -->
+                                                <!-- <li><a href="my-account.html">My Account</a></li>
+                                                <li><a href="wishlist.html">Wishlist</a></li> -->
                                             </ul>
                                         </li>
                                         <li class="menu-item-has-children"><a href="#">Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="about-us.html">About us</a></li>
-                                                <li><a href="contact-us-1.html">Contact us 1</a></li>
-                                                <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                                <li><a href="faq.html">F.A.Q</a></li>
-                                                <li><a href="gallery.html">Gallery</a></li>
+                                                <li><a href="about-us">About us</a></li>
+                                                <li><a href="contact">Contact us 1</a></li>
+                                                <!-- <li><a href="contact-us-2.html">Contact us 2</a></li> -->
+                                                <li><a href="faq">F.A.Q</a></li>
+                                                <!-- <li><a href="gallery.html">Gallery</a></li> -->
                                             </ul>
                                         </li>
                                     </ul>
