--- a/projectgeneral/templates/shop.html
+++ b/projectgeneral/templates/shop.html
@@ -4,8 +4,8 @@
 
     <div class="main-wrapper">
 
-        <!--Header Section Start-->
-        <div class="header-section d-none d-lg-block">
+         <!--Header Section Start-->
+         <div class="header-section d-none d-lg-block">
 
             <!--Header Top Start-->
             <div class="header-top">
@@ -27,7 +27,7 @@
                         <div class="col-lg-6">
                             <div class="header-top-right">
                                 <p class="header-top-right-text">Add an interesting message for your visitors</p>
-                                <a href="cart.html" class="header-top-right-cart">
+                                <a href="http://localhost:8000/cart" class="header-top-right-cart">
                                     <i class="ion-bag" data-count="2"></i> $43.00
                                 </a>
                             </div>
@@ -58,7 +58,7 @@
                     <!--Center Start-->
                     <div class="header-middle-center col">
                         <div class="header-logo">
-                            <a href="index.html"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                            <a href="http://localhost:8000"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                         </div>
                     </div>
                     <!--Center End-->
@@ -66,7 +66,7 @@
                     <!--Right Start-->
                     <div class="header-middle-right col-auto">
                         <div class="header-middle-free-case">
-                            <a href="contact-us-1.html"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                            <a href="http://localhost:8000/contact"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
                         </div>
                     </div>
                     <!--Right End-->
@@ -85,65 +85,35 @@
                             <div class="primary-menu">
                                 <nav>
                                     <ul>
-                                        <li class="menu-item-has-children"><a href="index.html">Home</a>
+                                        <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
                                             <ul class="sub-menu">
-                                                <li><a href="index.html">Homepage 01</a></li>
-                                                <li><a href="index-2.html">Homepage 02</a></li>
-                                                <li><a href="index-3.html">Homepage 03</a></li>
-                                                <li><a href="index-4.html">Homepage 04</a></li>
-                                                <li><a href="index-5.html">Homepage 05</a></li>
+                                                <li><a href="http://localhost:8000">Homepage 01</a></li>
+                                                
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children"><a href="practice-areas-1.html">Practice Areas</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="practice-areas-1.html">Practice Areas 01</a></li>
-                                                <li><a href="practice-areas-2.html">Practice Areas 02</a></li>
-                                                <li><a href="practice-areas-3.html">Practice Areas 03</a></li>
-                                                <li><a href="practice-areas-4.html">Practice Areas 04</a></li>
-                                                <li><a href="practice-bank-financial.html">Bank & Financial</a></li>
-                                                <li><a href="practice-capital-market.html">Capital Market</a></li>
-                                                <li><a href="practice-car-accident.html">Car Accident</a></li>
-                                                <li><a href="practice-corporate.html">Corporate</a></li>
-                                                <li><a href="practice-employment-law.html">Employment Law</a></li>
-                                                <li><a href="practice-family-law.html">Family Law</a></li>
-                                                <li><a href="practice-personal-injury.html">Personal Injury</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="case-results.html">Case Results</a></li>
+                                        
+                                       
                                         <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                             <ul class="sub-menu">
-                                                <li><a href="attorneys.html">Attorneys</a></li>
-                                                <li><a href="single-attorney.html">Single Attorney</a></li>
-                                                <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
-                                                <li><a href="careers.html">Careers</a></li>
+                                                <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                                
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children"><a href="news.html">Legal News</a>
+                                        
+                                        <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
                                             <ul class="sub-menu">
-                                                <li><a href="news.html">News</a></li>
-                                                <li><a href="news-2-column.html">News Two Columns</a></li>
-                                                <li><a href="news-details.html">News Details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children"><a href="shop.html">Shop</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">Shop</a></li>
-                                                <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                                <li><a href="product-details.html">Product Details</a></li>
-                                                <li><a href="cart.html">Shopping Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="login-register.html">Login & Register</a></li>
-                                                <li><a href="my-account.html">My Account</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
+                                                <li><a href="http://localhost:8000/shop">Shop</a></li>
+                                                <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
+                                                <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
+                                                
                                             </ul>
                                         </li>
                                         <li class="menu-item-has-children"><a href="#">Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="about-us.html">About us</a></li>
-                                                <li><a href="contact-us-1.html">Contact us 1</a></li>
-                                                <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                                <li><a href="faq.html">F.A.Q</a></li>
-                                                <li><a href="gallery.html">Gallery</a></li>
+                                                <li><a href="http://localhost:8000/about">About us</a></li>
+                                                <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
+                                                <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                                                
                                             </ul>
                                         </li>
                                     </ul>
