--- a/projectgeneral/templates/about-us.html
+++ b/projectgeneral/templates/about-us.html
@@ -150,14 +150,14 @@
                     <!--Left Start-->
                     <div class="col d-flex align-items-center">
                         <div class="header-logo mobile-header-logo">
-                            <a href="index.html"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                            <a href="http://localhost:8000/"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                         </div>
                     </div>
                     <!--Left End-->
 
                     <!--Right Start-->
                     <div class="col-auto d-flex align-items-center">
-                        <a href="cart.html" class="mobile-header-cart">
+                        <a href="http://localhost:8000/cart" class="mobile-header-cart">
                             <i class="ion-bag" data-count="2"></i>
                         </a>
                         <div class="mobile-header-right-toggles">
@@ -182,9 +182,9 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="index.html">Homepage 01</a></li>
+                                        <li><a href="http://localhost:8000">Homepage 01</a></li>
                                         <li><a href="index-2.html">Homepage 02</a></li>
                                         <li><a href="index-3.html">Homepage 03</a></li>
                                         <li><a href="index-4.html">Homepage 04</a></li>
@@ -236,11 +236,11 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="contact-us-1.html">Contact us 1</a></li>
-                                        <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                        <li><a href="faq.html">F.A.Q</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="http://localhost:8000/about">About us</a></li>
+                                        <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
+                                        
+                                        <li><a href="http://localhost:8000">F.A.Q</a></li>
+                                        
                                     </ul>
                                 </li>
                             </ul>
@@ -288,7 +288,7 @@
 
                         <h1 class="page-title">About us</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="http://localhost:8000">Home</a></li>
                             <li>About us</li>
                         </ul>
 
