--- a/projectgeneral/templates/contact.html
+++ b/projectgeneral/templates/contact.html
@@ -138,36 +138,7 @@
         <!--Header Section End-->
 
 
-        <!--Mobile Header Section Start-->
-        <div class="mobile-header d-block d-lg-none">
-            <div class="container">
-                <div class="row">
-
-                    <!--Left Start-->
-                    <div class="col d-flex align-items-center">
-                        <div class="header-logo mobile-header-logo">
-                            <a href="index.html"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
-                        </div>
-                    </div>
-                    <!--Left End-->
-
-                    <!--Right Start-->
-                    <div class="col-auto d-flex align-items-center">
-                        <a href="cart.html" class="mobile-header-cart">
-                            <i class="ion-bag" data-count="2"></i>
-                        </a>
-                        <div class="mobile-header-right-toggles">
-                            <button class="header-search-toggle" data-target="#fullscreen-search-overlay"><i class="fa fa-search"></i></button>
-                            <button class="mobile-menu-toggle"><i class="ion-navicon"></i></button>
-                        </div>
-                    </div>
-                    <!--Right End-->
-
-                </div>
-            </div>
-        </div>
-        <!--Mobile Header Section End-->
-
+       
 
         <!--Offcanvas Section Start-->
         <div id="offcanvas" class="offcanvas-section">
@@ -178,9 +149,9 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000/">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="index.html">Homepage 01</a></li>
+                                        <li><a href="http://localhost:8000/">Homepage 01</a></li>
                                         <li><a href="index-2.html">Homepage 02</a></li>
                                         <li><a href="index-3.html">Homepage 03</a></li>
                                         <li><a href="index-4.html">Homepage 04</a></li>
@@ -205,8 +176,8 @@
                                 <li><a href="case-results.html">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="attorneys.html">Attorneys</a></li>
-                                        <li><a href="single-attorney.html">Single Attorney</a></li>
+                                        <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                        <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                     </ul>
@@ -232,10 +203,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="contact-us-1.html">Contact us 1</a></li>
-                                        <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                        <li><a href="faq.html">F.A.Q</a></li>
+                                        <li><a href="http://localhost:8000/about">About us</a></li>
+                                        <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
+                                        <li><a href="contac">Contact us 2</a></li>
+                                        <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                     </ul>
                                 </li>
@@ -284,7 +255,7 @@
 
                         <h1 class="page-title">Contact us 2</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="http://localhost:8000/">Home</a></li>
                             <li>Contact us 2</li>
                         </ul>
 
@@ -425,10 +396,10 @@
                         <ul class="footer-widget-link">
                             <li><a href="practice-areas-1.html">Practice Areas</a></li>
                             <li><a href="case-results.html">Case Results</a></li>
-                            <li><a href="about-us.html">Our Firm</a></li>
+                            <li><a href="http://localhost:8000/about">Our Firm</a></li>
                             <li><a href="careers.html">Careers</a></li>
-                            <li><a href="faq.html">F.A.Q</a></li>
-                            <li><a href="contact-us-1.html">Contact Us</a></li>
+                            <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                            <li><a href="http://localhost:8000/ontact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--Footer Widget End-->
