--- a/projectgeneral/templates/product-details.html
+++ b/projectgeneral/templates/product-details.html
@@ -137,130 +137,101 @@
         <!--Header Section End-->
 
 
-        <!--Mobile Header Section Start-->
-        <div class="mobile-header d-block d-lg-none">
-            <div class="container">
-                <div class="row">
 
-                    <!--Left Start-->
-                    <div class="col d-flex align-items-center">
-                        <div class="header-logo mobile-header-logo">
-                            <a href="index.html"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
-                        </div>
-                    </div>
-                    <!--Left End-->
 
-                    <!--Right Start-->
-                    <div class="col-auto d-flex align-items-center">
-                        <a href="cart.html" class="mobile-header-cart">
-                            <i class="ion-bag" data-count="2"></i>
-                        </a>
-                        <div class="mobile-header-right-toggles">
-                            <button class="header-search-toggle" data-target="#fullscreen-search-overlay"><i class="fa fa-search"></i></button>
-                            <button class="mobile-menu-toggle"><i class="ion-navicon"></i></button>
-                        </div>
-                    </div>
-                    <!--Right End-->
+      <!--Offcanvas Section Start-->
+      <div id="offcanvas" class="offcanvas-section">
+        <button class="offcanvas-close" data-target="#offcanvas">&times;</button>
+        <div class="offcanvas-wrap">
+            <div class="inner">
 
+                <div class="offcanvas-menu">
+                    <nav>
+                        <ul>
+                            <li class="menu-item-has-children"><a href="http://localhost:8000/">Home</a>
+                                <ul class="sub-menu">
+                                    <li><a href="http://localhost:8000/">Homepage 01</a></li>
+                                    <li><a href="index-2.html">Homepage 02</a></li>
+                                    <li><a href="index-3.html">Homepage 03</a></li>
+                                    <li><a href="index-4.html">Homepage 04</a></li>
+                                    <li><a href="index-5.html">Homepage 05</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-item-has-children"><a href="practice-areas-1.html">Practice Areas</a>
+                                <ul class="sub-menu">
+                                    <li><a href="practice-areas-1.html">Practice Areas 01</a></li>
+                                    <li><a href="practice-areas-2.html">Practice Areas 02</a></li>
+                                    <li><a href="practice-areas-3.html">Practice Areas 03</a></li>
+                                    <li><a href="practice-areas-4.html">Practice Areas 04</a></li>
+                                    <li><a href="practice-bank-financial.html">Bank & Financial</a></li>
+                                    <li><a href="practice-capital-market.html">Capital Market</a></li>
+                                    <li><a href="practice-car-accident.html">Car Accident</a></li>
+                                    <li><a href="practice-corporate.html">Corporate</a></li>
+                                    <li><a href="practice-employment-law.html">Employment Law</a></li>
+                                    <li><a href="practice-family-law.html">Family Law</a></li>
+                                    <li><a href="practice-personal-injury.html">Personal Injury</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="case-results.html">Case Results</a></li>
+                            <li class="menu-item-has-children"><a href="#">Our Firm</a>
+                                <ul class="sub-menu">
+                                    <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                    <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
+                                    <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-item-has-children"><a href="news.html">Legal News</a>
+                                <ul class="sub-menu">
+                                    <li><a href="news.html">News</a></li>
+                                    <li><a href="news-2-column.html">News Two Columns</a></li>
+                                    <li><a href="news-details.html">News Details</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
+                                <ul class="sub-menu">
+                                    <li><a href="http://localhost:8000/shop.html">Shop</a></li>
+                                    <li><a href="shop-2-column.html">Shop 2 Column</a></li>
+                                    <li><a href="product-details.html">Product Details</a></li>
+                                    <li><a href="cart.html">Shopping Cart</a></li>
+                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="login-register.html">Login & Register</a></li>
+                                    <li><a href="my-account.html">My Account</a></li>
+                                    <li><a href="wishlist.html">Wishlist</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-item-has-children"><a href="#">Pages</a>
+                                <ul class="sub-menu">
+                                    <li><a href="http://localhost:8000/about">About us</a></li>
+                                    <li><a href="contact-us-1.html">Contact us 1</a></li>
+                                    <li><a href="contact-us-2.html">Contact us 2</a></li>
+                                    <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
+
+                <div class="offcanvas-info mt-auto">
+                    <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                    <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
+                </div>
+                <div class="offcanvas-social">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+                    <a href="#"><i class="fa fa-vimeo"></i></a>
+                </div>
+
             </div>
         </div>
-        <!--Mobile Header Section End-->
-
-
-        <!--Offcanvas Section Start-->
-        <div id="offcanvas" class="offcanvas-section">
-            <button class="offcanvas-close" data-target="#offcanvas">&times;</button>
-            <div class="offcanvas-wrap">
-                <div class="inner">
-
-                    <div class="offcanvas-menu">
-                        <nav>
-                            <ul>
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">Homepage 01</a></li>
-                                        <li><a href="index-2.html">Homepage 02</a></li>
-                                        <li><a href="index-3.html">Homepage 03</a></li>
-                                        <li><a href="index-4.html">Homepage 04</a></li>
-                                        <li><a href="index-5.html">Homepage 05</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="practice-areas-1.html">Practice Areas</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="practice-areas-1.html">Practice Areas 01</a></li>
-                                        <li><a href="practice-areas-2.html">Practice Areas 02</a></li>
-                                        <li><a href="practice-areas-3.html">Practice Areas 03</a></li>
-                                        <li><a href="practice-areas-4.html">Practice Areas 04</a></li>
-                                        <li><a href="practice-bank-financial.html">Bank & Financial</a></li>
-                                        <li><a href="practice-capital-market.html">Capital Market</a></li>
-                                        <li><a href="practice-car-accident.html">Car Accident</a></li>
-                                        <li><a href="practice-corporate.html">Corporate</a></li>
-                                        <li><a href="practice-employment-law.html">Employment Law</a></li>
-                                        <li><a href="practice-family-law.html">Family Law</a></li>
-                                        <li><a href="practice-personal-injury.html">Personal Injury</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="case-results.html">Case Results</a></li>
-                                <li class="menu-item-has-children"><a href="#">Our Firm</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="attorneys.html">Attorneys</a></li>
-                                        <li><a href="single-attorney.html">Single Attorney</a></li>
-                                        <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
-                                        <li><a href="careers.html">Careers</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="news.html">Legal News</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="news.html">News</a></li>
-                                        <li><a href="news-2-column.html">News Two Columns</a></li>
-                                        <li><a href="news-details.html">News Details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="shop.html">Shop</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="shop.html">Shop</a></li>
-                                        <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="cart.html">Shopping Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="login-register.html">Login & Register</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="#">Pages</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="contact-us-1.html">Contact us 1</a></li>
-                                        <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                        <li><a href="faq.html">F.A.Q</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-
-                    <div class="offcanvas-info mt-auto">
-                        <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
-                        <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
-                    </div>
-                    <div class="offcanvas-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        <a href="#"><i class="fa fa-vimeo"></i></a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <!--Offcanvas Section End-->
-        <!--OffCanvas Overlay-->
-        <div class="offcanvas-overlay"></div>
-
+    </div>
+    <!--Offcanvas Section End-->
+    <!--OffCanvas Overlay-->
+    <div class="offcanvas-overlay"></div>
+    
         <!--Fullscreen Search Overlay Start-->
         <div id="fullscreen-search-overlay">
             <div id="fullscreen-search-form">
@@ -283,7 +254,7 @@
 
                         <h1 class="page-title">Shop</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="http://localhost:8000/">Home</a></li>
                             <li><a href="shop.html">Shop</a></li>
                             <li>Album</li>
                         </ul>
