--- a/projectgeneral/templates/shop.html
+++ b/projectgeneral/templates/shop.html
@@ -137,36 +137,7 @@
         <!--Header Section End-->
 
 
-        <!--Mobile Header Section Start-->
-        <div class="mobile-header d-block d-lg-none">
-            <div class="container">
-                <div class="row">
-
-                    <!--Left Start-->
-                    <div class="col d-flex align-items-center">
-                        <div class="header-logo mobile-header-logo">
-                            <a href="index.html"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
-                        </div>
-                    </div>
-                    <!--Left End-->
-
-                    <!--Right Start-->
-                    <div class="col-auto d-flex align-items-center">
-                        <a href="cart.html" class="mobile-header-cart">
-                            <i class="ion-bag" data-count="2"></i>
-                        </a>
-                        <div class="mobile-header-right-toggles">
-                            <button class="header-search-toggle" data-target="#fullscreen-search-overlay"><i class="fa fa-search"></i></button>
-                            <button class="mobile-menu-toggle"><i class="ion-navicon"></i></button>
-                        </div>
-                    </div>
-                    <!--Right End-->
-
-                </div>
-            </div>
-        </div>
-        <!--Mobile Header Section End-->
-
+       
 
         <!--Offcanvas Section Start-->
         <div id="offcanvas" class="offcanvas-section">
@@ -177,9 +148,9 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="index.html">Homepage 01</a></li>
+                                        <li><a href="http://localhost:8000/">Homepage 01</a></li>
                                         <li><a href="index-2.html">Homepage 02</a></li>
                                         <li><a href="index-3.html">Homepage 03</a></li>
                                         <li><a href="index-4.html">Homepage 04</a></li>
@@ -204,8 +175,8 @@
                                 <li><a href="case-results.html">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="attorneys.html">Attorneys</a></li>
-                                        <li><a href="single-attorney.html">Single Attorney</a></li>
+                                        <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                        <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                     </ul>
@@ -217,9 +188,9 @@
                                         <li><a href="news-details.html">News Details</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children"><a href="shop.html">Shop</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="shop.html">Shop</a></li>
+                                        <li><a href="http://localhost:8000/shop.html">Shop</a></li>
                                         <li><a href="shop-2-column.html">Shop 2 Column</a></li>
                                         <li><a href="product-details.html">Product Details</a></li>
                                         <li><a href="cart.html">Shopping Cart</a></li>
@@ -231,10 +202,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="about-us.html">About us</a></li>
+                                        <li><a href="http://localhost:8000/about">About us</a></li>
                                         <li><a href="contact-us-1.html">Contact us 1</a></li>
                                         <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                        <li><a href="faq.html">F.A.Q</a></li>
+                                        <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                     </ul>
                                 </li>
@@ -283,7 +254,7 @@
 
                         <h1 class="page-title">Shop Full Width</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="http://localhost:8000/">Home</a></li>
                             <li>Shop Full Width</li>
                         </ul>
 
